[package]
name = "tryfrom-via-fromstr"
description = "Derive `TryFrom` by delegating to the `FromStr` impl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }

[dev-dependencies]
indoc = "2.0.1"
prettyplease = "0.2.4"
test-case = "3.1.0"
derive_more = "0.99.17"
